components/konflux-rbac/policies/bootstrap-tenant-namespace/bootstrap-tenant-namespace-rbcm-clusterpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-rbcm
spec:
  rules:
  - name: create-appstudio-runner-rolebinding
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              konflux-ci.dev/type: tenant
          operations:
            - CREATE
            - UPDATE
    exclude:
      any:
      - resources:
          kinds:
            - Namespace
          selector:
            matchLabels:
              toolchain.dev.openshift.com/type: tenant
    generate:
      generateExisting: false
      synchronize: false
      apiVersion: rbac.authorization.k8s.io/v1
      kind: RoleBinding
      name: appstudio-pipelines-runner-rolebinding
      namespace: '{{request.object.metadata.name}}'
      data:
        roleRef:
          apiGroup: rbac.authorization.k8s.io
          kind: ClusterRole
          name: appstudio-pipelines-runner
        subjects:
        - apiGroup: ""
          kind: ServiceAccount
          namespace: '{{request.object.metadata.name}}'
          name: appstudio-pipeline
  - name: create-trusted-ca-configmap
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              konflux-ci.dev/type: tenant
    exclude:
      any:
      - resources:
          kinds:
            - Namespace
          selector:
            matchLabels:
              toolchain.dev.openshift.com/type: tenant
    generate:
      generateExisting: true
      synchronize: false
      apiVersion: v1
      kind: ConfigMap
      namespace: '{{request.object.metadata.name}}'
      name: trusted-ca
      data:
        metadata:
          name: trusted-ca
          labels:
            config.openshift.io/inject-trusted-cabundle: "true"
        data: {}
