components/konflux-rbac/policies/bootstrap-tenant-namespace/.chainsaw-test/resources/expected-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: appstudio-pipelines-runner-rolebinding
  namespace: (join('-', [$namespace, $suffix]))
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: appstudio-pipeline
subjects:
- kind: ServiceAccount
  namespace: (join('-', [$namespace, $suffix]))
  name: appstudio-pipeline
